--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -1,6 +1,1 @@
-{% section 'hero' %}
-{% section 'featured-categories' %}
-{% section 'featured-products' %}
-{% section 'instagram-showcase' %}
-{% section 'testimonials' %}
-{% section 'newsletter' %}
+{{ content_for_index }}
